Bug 589318 - guard that eval-in-function frames don't access args (r=brendan)