js/src/jsinterp.h
@@ -160,6 +160,7 @@ struct JSStackFrame
 
     JSObject* getArgsObj() const {
         JS_ASSERT(hasArgsObj());
+        JS_ASSERT(!isEvalFrame());
         return argsobj;
     }
 
@@ -384,6 +385,7 @@ struct JSStackFrame
     }
 
     size_t numFormalArgs() const {
+        JS_ASSERT(!isEvalFrame());
         return getFunction()->nargs;
     }
 
@@ -426,6 +428,7 @@ struct JSStackFrame
     /* Argument count accessors */
 
     size_t numActualArgs() const {
+        JS_ASSERT(!isEvalFrame());
         return argc;
     }
 
@@ -499,6 +502,7 @@ struct JSStackFrame
     }
 
     bool isDummyFrame() const { return !!(flags & JSFRAME_DUMMY); }
+    bool isEvalFrame() const { return !!(flags & JSFRAME_EVAL); }
 
     /* Contains static assertions for member alignment, don't call. */
     inline void staticAsserts();
